voice tutorial ing

--- a/templates/chara_manager.html
+++ b/templates/chara_manager.html
@@ -73,6 +73,7 @@
     <link rel="stylesheet" href="/static/libs/driver.min.css">
 
     <!-- 通用教程管理器 -->
+    <script src="/static/tutorial_voice.js"></script>
     <script src="/static/universal-tutorial-manager.js"></script>
 
     <!-- 初始化由 chara_manager.js 负责（避免 CSP 内联脚本限制） -->
