--- a/templates/live2d_parameter_editor.html
+++ b/templates/live2d_parameter_editor.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="/static/css/tutorial-styles.css">
 
     <!-- 通用教程管理器 -->
+    <script src="/static/tutorial_voice.js"></script>
     <script src="/static/universal-tutorial-manager.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
