--- a/templates/vrm_emotion_manager.html
+++ b/templates/vrm_emotion_manager.html
@@ -146,6 +146,7 @@
     <!-- 脚本文件 -->
     <script src="/static/js/vrm_emotion_manager.js"></script>
     <script src="/static/libs/driver.min.js"></script>
+    <script src="/static/tutorial_voice.js"></script>
     <script src="/static/universal-tutorial-manager.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
