--- a/templates/voice_clone.html
+++ b/templates/voice_clone.html
@@ -91,7 +91,7 @@
     <link rel="stylesheet" href="/static/libs/driver.min.css">
 
     <!-- 通用教程管理器 -->
-    <script src="/static/tutorial_voice.js"></script>
+    <script src="/static/tutorial_auto_voice.js"></script>
     <script src="/static/universal-tutorial-manager.js"></script>
 
     <!-- 初始化 -->
