--- a/templates/live2d_emotion_manager.html
+++ b/templates/live2d_emotion_manager.html
@@ -1098,7 +1098,7 @@
     <script src="/static/libs/driver.min.js"></script>
 
     <!-- 通用教程管理器 -->
-    <script src="/static/tutorial_voice.js"></script>
+    <script src="/static/tutorial_auto_voice.js"></script>
     <script src="/static/universal-tutorial-manager.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
